...
                verticalArrangement = Arrangement.spacedBy(16.dp)
            ) {
                MenuButton(
                    text = "PLAY GAME",
                    containerColor = Color(0xFFFFD700),
                    contentColor = Color.Black,
                    modifier = Modifier.testTag("playButton_id")
                ) {
                    vm.setStartGameValues()
                    navigateTo2()
                }

                MenuButton(
...
