...
fun DeckGameItem(actualDeck: Deck, navigateToGame: () -> Unit, viewModel: MemViewModel) {
    val scope = rememberCoroutineScope()
    var isDownloading by rememberSaveable { mutableStateOf(false) }

    Card(
        modifier = Modifier
            .testTag("deckItem_id")
            .fillMaxWidth()
            .height(100.dp)
            .clickable(enabled = !isDownloading) {
                scope.launch {
                    isDownloading = true
                    if (viewModel.selectAndDownloadDeck(actualDeck)) {
...
